# RatioDelta

./: .gitignore  ACKNOWLEDGEMENTS.md  README.md  README_printable.md  build_and_checks.sh  ratio_delta.py  ratio_delta.sql  wget_sha512.sh
JS/: README.md  README.md.tpl  README_printable.md  eslint.config.js  index.js  package-lock.json  package.json
Python/: README.md  README.md.tpl  README_printable.md  pyproject.toml
Python/src/ratio_delta/: __init__.py
SQL/: ratio_delta.sql  ratio_delta_my_sql_or_maria_db.sql  ratio_delta_my_sql_or_maria_db.test.sql  ratio_delta_pg_sql.sql  ratio_delta_plpgsql.sql  ratio_delta_t_sql.sql
